--- a/nuspecs/Hangfire-SiriusXm.nuspec
+++ b/nuspecs/Hangfire-SiriusXm.nuspec
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package >
   <metadata>
-    <id>Hangfire-SiriusXm.Core</id>
-    <version>0.0.0</version>
+    <id>Hangfire.Core</id>
+    <version>1.3.4</version>
     <title>Hangfire Core Components</title>
     <authors>Sergey Odinokov</authors>
     <owners>odinserj</owners>
